# pysundial

./: .gitignore  BUG_FIXES.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_NOTES.md  MANIFEST.in  README.md  benchmark.py  combustion.py  combustion_analysis copy.ipynb  combustion_analysis.ipynb  combustion_experiment.ipynb  combustion_integrator_experiment.py  comparison.py  experiment.py  install_dependencies.py  pyproject.toml  rl_trainer.py  rl_training.ipynb  setup.cfg  setup.py  simple_comparison.py  simple_test.py  stiffness_detector.py  test_arkode.py  test_clean_failure.py  test_cvode.py  test_verbose.py  utils.py
.github/workflows/: ci.yml  publish.yml
SundialsPy/: __init__.py
environment/: combustion_env.py  combustion_problem.py  env_wrapper.py  environment.py  integrator.py  integrator_.py
examples/: comparison.py  simple_comparison.py  simple_comparison2.py  simple_test.py  test_arkode.py  test_cvode.py  test_implicit.py
experiments/: combustion_integrator_experiment.py  data_collection.ipynb  data_collector.py
large_mechanism/: JetSurF1.0-l.yaml  n-dodecane.yaml  octane.yaml
src/: module.cpp  sundials_wrapper.hpp
src/arkode/: arkode_module.cpp  arkode_module.hpp  butcher_tables.cpp
src/common/: common.cpp  common.hpp
src/cvode/: cvode_module.cpp  cvode_module.hpp
src/utils/: callback_wrappers.hpp
sundials_py/: __init__.py
tests/: test_arkode.py  test_arkode_explicit.py  test_arkode_roots.py  test_cvode.py  test_cvode_jacobian.py  test_cvode_roots.py
