[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cmake>=3.10",
    "pybind11>=2.6.0",
    "pybind11[global]>=2.6.0",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "sundials_py"
version = "0.1.0"
description = "Python bindings for SUNDIALS solvers"
readme = "README.md"
authors = [
    {name = "Eloghosa", email = "eloghosaefficiency@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0"
]
keywords = ["sundials", "ode", "pde", "differential equations", "scientific computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/DMO-LAB/pysundial"
Repository = "https://github.com/DMO-LAB/pysundial/
Issues = "https://github.com/DMO-LAB/pysundial/issues"

[tool.setuptools]
packages = ["sundials_py"]