[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cmake>=3.10",
    "pybind11>=2.6.0",
    "pybind11[global]>=2.6.0",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "SundialsPy"
version = "0.1.0"
description = "Python bindings for SUNDIALS"
authors = [{name = "Eloghosa Ikponmwoba", email = "eloghosaefficiency@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/elotech47/SundialsPy"
Repository = "https://github.com/elotech47/SundialsPy"

[tool.setuptools]
packages = ["SundialsPy"]
