[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "cmake>=3.10",
    "pybind11>=2.6.0",
    "pybind11[global]>=2.6.0",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "SundialsPy"
version = "0.1.0"
description = "Python bindings for SUNDIALS"
authors = [{name = "Eloghosa Ikponmwoba", email = "eloghosaefficiency@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
test = ["pytest>=6.0", "numpy"]
dev = ["pytest>=6.0", "black>=21.0", "flake8>=3.8", "numpy"]

[project.urls]
Homepage = "https://github.com/elotech47/SundialsPy"
Repository = "https://github.com/elotech47/SundialsPy"

[tool.setuptools]
packages = ["SundialsPy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
