[metadata]
name = sundials_py
version = 0.1.0
description = Python bindings for SUNDIALS solvers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/pysundial
project_urls =
    Bug Tracker = https://github.com/yourusername/pysundial/issues
    Documentation = https://pysundial.readthedocs.io/
    Source Code = https://github.com/yourusername/pysundial
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C++
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy >= 1.19.0

[options.packages.find]
where = .
include = sundials_py*

[options.extras_require]
test = 
    pytest >= 6.0
    pytest-cov >= 2.0
    numpy
dev = 
    pytest >= 6.0
    pytest-cov >= 2.0
    black >= 21.0
    flake8 >= 3.8
    sphinx >= 4.0
    sphinx-rtd-theme >= 1.0
    numpy

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --strict-markers
    --disable-warnings
    --cov=sundials_py
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml

[coverage:run]
source = sundials_py
omit = 
    */tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError

[flake8]
max-line-length = 88
extend-ignore = E203, E501, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
